[Android] bindings/v8/V8DOMWrapper.h[cpp] are missing guards for XPATH and XSLT features https://bugs.webkit.org/show_bug.cgi?id=33944

Patch by Andrei Popescu <andreip@google.com> on 2010-01-21
Reviewed by David Levin.

Inside V8DOMWrapper.h[cpp], the code for XPATH and XSLT features is not guarded
by the appropriate #if ENABLE(feature) macros. Add the missing guards.
V8DOMWrapper.cpp includes ChromiumBridge.h for no reason. Remove the include.

No new tests needed, functionality not changed.

* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::getTemplate):
* bindings/v8/V8DOMWrapper.h:



Canonical link: https://commits.webkit.org/45029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53630 268f45cc-cd09-0410-ab3c-d52691b4dbfc